# g2remote

./: .gitignore  LICENSE.md  LICENSE.txt  README.md  install.md  install.txt  install_jp.md  operation.md  operation.txt  operation_jp.md  pyproject.toml  setup.cfg  setup.py
doc/: FAQ.md  TROUBLESHOOTING.md  install.md  install_jp.md  operation.md  operation_jp.md
g2remote/: __init__.py  g2connect.py  remmina.py  version.py
g2remote/html/: gen2_screens.html
g2remote/util/: make_release.py
scripts/: g2connect  g2connect.bat  gen2_play
