[metadata]
name = g2remote
description = Programs for conducting extended remote observation with Subaru Telescope
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/g2remote
edit_on_github = False
github_project = naojsoft/g2remote
keywords = subaru, telescope, remote, observation, tools
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    pyotp>=2.3.0
    # need paramiko 3.3.1 for some advanced features
    paramiko>=2.8.1
    pyyaml>=5.3.1
    jinja2>=3.0.0
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/g2connect
    scripts/g2connect.bat

[options.package_data]
g2remote = html/*.html
